translation-tool/inputs/source_meta/objects/YAHS_PRT_CaseListViews__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maintains Profile to list view mapping</description>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <description>Defines the sorting logic for list views</description>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Set_Name__c</fullName>
        <label>Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Views__c</fullName>
        <label>List Views</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Profile Name</description>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_Is_List_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is checked if its just a list view and has no associating queue</description>
        <label>Is List View</label>
        <type>Checkbox</type>
    </fields>
    <label>YAHS_PRT_CaseListViews</label>
</CustomObject>